src/objects/Service_Catalog_Request_Form__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <defaultValue>&quot;Monthly&quot;</defaultValue>
        <label>Billing Cycle</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Entry__c</fullName>
        <label>Catalog Entry</label>
        <referenceTo>Service_Catalog_Entry__c</referenceTo>
        <relationshipLabel>Service Catalog Request Form</relationshipLabel>
        <relationshipName>Service_Catalog_Request_Form</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Someone with the client</inlineHelpText>
        <label>Client Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Project_Name__c</field>
                <operation>equals</operation>
                <valueField>Contact.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Catalog Request Form</relationshipLabel>
        <relationshipName>Service_Catalog_Request_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_or_Team__c</fullName>
        <label>Client or Team</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Two people  that are in charge of the content and access</inlineHelpText>
        <label>Content Owner 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Catalog_Request_Form4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Two people  that are in charge of the content and access</inlineHelpText>
        <label>Content Owner 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Catalog_Request_Form5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_End_Date__c</fullName>
        <label>End of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hosting_Fees__c</fullName>
        <formula>CASE(Service_Type__c, &quot;Basic site&quot;, 75, &quot;Advanced site&quot;, 125, &quot;Project site&quot;, 150, &quot;Program site&quot;, 250, &quot;Custom&quot;, 500, VALUE(&quot;&quot;))</formula>
        <inlineHelpText>This is the fee the project will be charged  per month you can request monthly usage once the site is active Please select the projected usage but you will only be charged based on your site usage.</inlineHelpText>
        <label>Hosting Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>I_agree_to_the_Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The agreement of the Terms and Conditions constitutes a binding, legal acceptance of the stipulations within the terms and conditions of the request form.</inlineHelpText>
        <label>I agree to the Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Term_Calc__c</fullName>
        <label>Lease Term Calc</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Term_End_Date__c</fullName>
        <formula>DATE(
  year(Start_of_Service__c) + floor((month(Start_of_Service__c) + VALUE(Lease_Term_Calc__c))/12) + if(and(month(Start_of_Service__c)=12, VALUE(Lease_Term_Calc__c)&gt;=12),-1,0),
  if( mod( month(Start_of_Service__c) + VALUE(Lease_Term_Calc__c), 12 ) = 0, 12 , mod( month(Start_of_Service__c) + VALUE(Lease_Term_Calc__c), 12 )
),
min(
  day(Start_of_Service__c),
  case(
    max( mod( month(Start_of_Service__c) + VALUE(Lease_Term_Calc__c), 12 ) , 1),
    9,30,
    4,30,
    6,30,
    11,30,
    2,
      if(mod((year(Start_of_Service__c)
      + floor((month(Start_of_Service__c) + VALUE(Lease_Term_Calc__c))/12) + if(and(month(Start_of_Service__c)=12, VALUE(Lease_Term_Calc__c)&gt;=12),-1,0)),4)=0,29,28),
      31
    )
  )
)</formula>
        <label>Lease Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Term__c</fullName>
        <inlineHelpText>the length of the service are year renewal notice report will be sent as well as a 90 day end of lease notice with the option to extend.</inlineHelpText>
        <label>Lease Term</label>
        <picklist>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Ended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Catalog Request Form</relationshipLabel>
        <relationshipName>Service_Catalog_Request_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Cell_Phone__c</fullName>
        <formula>Project_Manager__r.MobilePhone</formula>
        <label>PM Cell Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Desk_Phone__c</fullName>
        <formula>Project_Manager__r.Phone</formula>
        <label>PM Desk Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Email__c</fullName>
        <formula>Project_Manager__r.Email</formula>
        <label>PM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Catalog_Request_Form1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the project name and save the form to populate the other project details.</inlineHelpText>
        <label>Project Name</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Service Catalog Request Form</relationshipLabel>
        <relationshipName>Service_Catalog_Request_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Technical_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>two people who handle the design of the site</inlineHelpText>
        <label>Project Technical Contact 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Catalog_Request_Form3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>two people who handle the design of the site</inlineHelpText>
        <label>Project Technical Contact 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Catalog_Request_Form2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <formula>Today()</formula>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Form_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name &amp; &quot; &quot; &amp; Project_Name__r.Name &amp; &quot; &quot; &amp; &quot;-&quot; &amp; &quot; &quot; &amp; TEXT(Project_Number__c), &quot;_self&quot;)</formula>
        <label>Request Form Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Form</label>
        <referenceTo>Service_Catalog_Request_Form__c</referenceTo>
        <relationshipLabel>Service Catalog Request Form</relationshipLabel>
        <relationshipName>Service_Catalog_Request_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_Address__c</fullName>
        <formula>if(LEN(Requestor_Name__r.Street)&gt;0, Requestor_Name__r.Street &amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Requestor_Name__r.City)&gt;0, Requestor_Name__r.City &amp; &quot;,&quot; , &quot;&quot; )&amp;
if(LEN(Requestor_Name__r.State)&gt;0, Requestor_Name__r.State &amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Requestor_Name__r.PostalCode)&gt;0, Requestor_Name__r.PostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(Requestor_Name__r.Country) &gt;0, Requestor_Name__r.Country,&quot;&quot;)</formula>
        <label>Requestor Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Business_Line__c</fullName>
        <formula>Requestor_Name__r.Business_Line__c</formula>
        <label>Requestor Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Cell_Phone__c</fullName>
        <formula>Requestor_Name__r.MobilePhone</formula>
        <label>Requestor Cell Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Desk_Phone__c</fullName>
        <formula>Requestor_Name__r.Phone</formula>
        <label>Requestor Desk Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <formula>Requestor_Name__r.Email</formula>
        <label>Requestor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Catalog_Request_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <inlineHelpText>We have a standard environment set of sla&apos;s. Please contact us with special needs.</inlineHelpText>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tracks the SME from the catalog Entry</description>
        <label>SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Catalog_Request_Form6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <inlineHelpText>Select the service type details found in the service catalog or email the TaaS team and we will contact you.</inlineHelpText>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setup_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>there is no setup fees except for a custom request. TaaS is a service provided we do not provide development or design unless otherwise agreed on.</inlineHelpText>
        <label>Setup Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Depth__c</fullName>
        <inlineHelpText>this the number of sub-sites</inlineHelpText>
        <label>Site Depth</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4x4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <inlineHelpText>The site name is a name of the site and can have spaces.</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Requirements__c</fullName>
        <inlineHelpText>For project with special compliance requirement please select one ask to be contacted.</inlineHelpText>
        <label>Special Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>import export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>managed service(federal service)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>isolation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&quot;manual entry&quot;</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_of_Service__c</fullName>
        <label>Start of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <formula>CASE(Service_Type__c,
&quot;Basic site&quot;, &quot;50gb&quot;,
&quot;Advanced site&quot;, &quot;100gb&quot;,
&quot;Project site&quot;, &quot;150gb&quot;,
&quot;Program site&quot;, &quot;200gb&quot;,
&quot;Custom&quot;, &quot;200gb plus overage fees&quot;,
&quot;&quot;
)</formula>
        <inlineHelpText>you site will have a quota set based on your level selected your site will never be locked Quota are used for capacity planing and reporting.</inlineHelpText>
        <label>Storage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <label>Task Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Doc__c</fullName>
        <defaultValue>&quot;aecom--npssurvey--c.cs7.content.force.com/servlet/servlet.FileDownload?file=015M0000000d8i5&quot;</defaultValue>
        <label>_</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Terms_and_conditions_language__c</fullName>
        <formula>&quot;Do you agree to the pricing&quot; &amp; &quot; &quot; &amp; HYPERLINK(&quot;https://aecom--npssurvey--c.cs7.content.force.com/servlet/servlet.FileDownload?file=015M0000000d8i5&quot; ,&quot;terms &amp; conditions?&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url_name__c</fullName>
        <inlineHelpText>This is the url test address. Make it short to keep the address short, this not the site name.</inlineHelpText>
        <label>url name</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Service Catalog Request Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RF-{000}</displayFormat>
        <label>Name of Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Catalog Request Form</pluralLabel>
    <recordTypes>
        <fullName>Agreement_Clause</fullName>
        <active>true</active>
        <description>Tracks agreement to the terms and conditions of a service.</description>
        <label>Agreement Clause</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFP</fullName>
        <active>true</active>
        <label>RFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>SharePoint_Site_Request</fullName>
        <active>true</active>
        <description>Tracks the requests for SharePoint sites.</description>
        <label>SharePoint Site Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>